2008-08-26  Adam Schreiber  <sadam@clemson.edu>
    * src/vala-build.stamp:
    * src/seahorse-keyserver-results.c:
    * src/seahorse-keyserver-results.vala:
    * src/seahorse-keyserver-results.h:
    * src/seahorse-key-manager.c:
    * src/seahorse-key-manager.vala:
    * src/seahorse-viewer.c:
    * src/seahorse-key-manager.h:
    * src/seahorse-viewer.h:
    * src/seahorse-generate-select.c:
    * gkr/vala-build.stamp:
    * gkr/seahorse-gkr-commands.c:
    * pgp/vala-build.stamp:
    * pgp/seahorse-pgp-generator.c:
    * pgp/seahorse-pgp-commands.c:
    * ssh/vala-build.stamp:
    * ssh/seahorse-ssh-commands.c:
    * ssh/seahorse-ssh-generator.c:
    * libseahorse/seahorse-generator.h:
    * libseahorse/seahorse-commands.c:
    * libseahorse/seahorse-object.c:
    * libseahorse/seahorse-commands.h:
    * libseahorse/seahorse-object.h:
    * libseahorse/seahorse-servers.c:
    * libseahorse/vala-build.stamp:
    * libseahorse/seahorse-view.c:
    * libseahorse/seahorse-view.h:
    * libseahorse/seahorse-generator.c: Add signal handler for help button on
    the first time options.  Fixes bug #549036
    * libseahorse/seahorse-validity.c:
    * pgp/seahorse-pgp-key-properties.c: Clear up ambiguity by adding contexts.
    Fixes bug #549460

2008-08-22  Adam Schreiber  <sadam@clemson.edu>

    * libcryptui/cryptui-key-chooser.c: Fix copy & paste error while installing
    properties.

2008-08-18  Stef Walter  <stef@memberwebs.com>

	* configure.in: Bump version number.

=== seahorse 2.23.90 ===

2008-08-18  Stef Walter  <stef@memberwebs.com>

	* README:
	* NEWS: Release version 2.23.90

2008-08-13  Adam Schreiber  <sadam@clemson.edu>

    * data/icons/hicolor_apps_16x16_seahorse.png (added):
    * data/icons/hicolor_apps_16x16_seahorse-preferences.png (added):
    * data/icons/hicolor_apps_22x22_seahorse.png (added):
    * data/icons/hicolor_apps_22x22_seahorse-preferences.png (added):
    * data/icons/hicolor_apps_24x24_seahorse.png (added):