@@ -1,3 +1,10 @@
+2008-08-27  Adam Schreiber  <sadam@clemson.edu>
+
+    * src/vala-build.stamp:
+    * src/seahorse-key-manager.c:
+    * src/seahorse-key-manager.vala: Don't repetedly load gnome-keyring items.
+    Fixes bug #547682
+
 2008-08-26  Adam Schreiber  <sadam@clemson.edu>
     * src/vala-build.stamp:
     * src/seahorse-keyserver-results.c:
